*May* fix bug on iOS WebKit

--- a/style.css
+++ b/style.css
@@ -24,8 +24,6 @@ body.dark-theme {
 }
 
 .site-header {
-  position: sticky;
-  top: 0;
   transition: box-shadow 0.2s;
   margin-top: 50px;
   width: 100%;
@@ -35,6 +33,10 @@ body.dark-theme {
 }
 
 .site-header.collapse {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin-top: 0;
   min-height: 5rem;
   box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.2);
 }
